# basin

./: .basin-test.example.toml  .basin-test.https.toml  .gitignore  CAPABILITIES.md  Cargo.toml  LICENSE  README.md  TASK.md  WEDGE.md
.basin-local-s3-certs/: private.key  public.crt
benchmark/: README.md  RESULTS.md  RESULTS_real.md  bundle.py  index.html  index_real.html  start_local_s3.sh
benchmark/assets/: dashboard.js  style.css
benchmark/data/: compare_lifecycle_ops.json  compare_postgres.json  compare_server_lifecycle.json  manifest.json  results.js  scaling_concurrency.json  scaling_data_size.json  scaling_idle_tenants.json  scaling_noisy_neighbor.json  viability_analytical.json  viability_analytical_routing.json  viability_compression_ratio.json  viability_durable_catalog.json  viability_extended_protocol.json  viability_idle_tenant_ram.json  viability_isolation_under_load.json  viability_large_dataset_pointquery.json  viability_orm_compat.json  viability_predicate_pushdown.json  viability_shard_insert_path.json  viability_tenant_deletion.json  viability_update_delete.json  viability_vector_search.json
benchmark/data_real/: compare_lifecycle_ops.json  compare_postgres.json  compare_server_lifecycle.json  manifest.json  results.js  scaling_concurrency.json  scaling_data_size.json  scaling_idle_tenants.json  scaling_noisy_neighbor.json  viability_analytical.json  viability_analytical_routing.json  viability_compression_ratio.json  viability_durable_catalog.json  viability_extended_protocol.json  viability_idle_tenant_ram.json  viability_isolation_under_load.json  viability_large_dataset_pointquery.json  viability_orm_compat.json  viability_predicate_pushdown.json  viability_s3_credentials_smoke.json  viability_shard_insert_path.json  viability_tenant_deletion.json  viability_update_delete.json  viability_vector_search.json
crates/basin-analytical/: Cargo.toml
crates/basin-analytical/src/: lib.rs  validate.rs
crates/basin-auth/: Cargo.toml
crates/basin-auth/src/: config.rs  email.rs  jwt.rs  lib.rs  password.rs  rate_limit.rs  schema.rs  tokens.rs
crates/basin-auth/src/flows/: magic.rs  refresh.rs  reset.rs  signin.rs  signup.rs
crates/basin-catalog/: Cargo.toml
crates/basin-catalog/src/: in_memory.rs  lib.rs  metadata.rs  postgres.rs  rest.rs  snapshot.rs
crates/basin-common/: Cargo.toml
crates/basin-common/src/: error.rs  ids.rs  lib.rs  telemetry.rs
crates/basin-engine/: Cargo.toml
crates/basin-engine/src/: analytical_route.rs  convert.rs  ddl.rs  dml.rs  dml_mutate.rs  executor.rs  fast_select.rs  lib.rs  noisy_detector.rs  prepared.rs  session.rs  types.rs  udf.rs  vector_search.rs
crates/basin-placement/: Cargo.toml
crates/basin-placement/src/: lib.rs
crates/basin-pool/: Cargo.toml
crates/basin-pool/src/: eviction.rs  lib.rs  pooled_session.rs  state.rs  stats.rs
crates/basin-rest/: Cargo.toml
crates/basin-rest/src/: errors.rs  json.rs  lib.rs  parser.rs  server.rs  tests.rs
crates/basin-rest/src/routes/: auth.rs  data.rs  mod.rs
crates/basin-router/: Cargo.toml
crates/basin-router/src/: error.rs  lib.rs  protocol.rs  resolver.rs  types.rs
crates/basin-shard/: Cargo.toml
crates/basin-shard/src/: in_process.rs  lib.rs
crates/basin-storage/: Cargo.toml
crates/basin-storage/src/: concurrency.rs  data_file.rs  lib.rs  metadata_cache.rs  paths.rs  predicate.rs  reader.rs  scheduler.rs  vector_index.rs  writer.rs
crates/basin-vector/: Cargo.toml
crates/basin-vector/src/: distance.rs  index.rs  lib.rs
crates/basin-wal/: Cargo.toml
crates/basin-wal/src/: file_wal.rs  lib.rs  segment.rs  state.rs
dashboard/: README.md  bundle.py  serve.sh
dashboard/data/: compare_postgres.json  manifest.json  results.js  scaling_concurrency.json  scaling_idle_tenants.json  scaling_noisy_neighbor.json  viability_extended_protocol.json  viability_idle_tenant_ram.json  viability_orm_compat.json  viability_predicate_pushdown.json  viability_tenant_deletion.json  viability_vector_search.json
docs/: architecture.md  sql-compatibility.md
docs/decisions/: 0001-single-region-only.md  0002-no-postgres-extensions.md  0003-native-vector-search.md  0004-multi-region-read-replicas.md  0005-auth-system.md  0006-rest-api-layer.md  0007-connection-pooling.md  0008-noisy-neighbor-fairness.md  README.md
services/basin-server/: Cargo.toml
services/basin-server/src/: main.rs
tests/integration/: Cargo.toml
tests/integration/src/: benchmark.rs  lib.rs  test_config.rs
tests/integration/tests/: compare_lifecycle_ops.rs  compare_postgres.rs  compare_server_lifecycle.rs  durable_catalog_smoke.rs  insert_through_shard.rs  orm_smoke.rs  phase1_substrate.rs  poc_extended_smoke.rs  poc_pgwire_jwt_smoke.rs  poc_pool_smoke.rs  poc_rest_smoke.rs  poc_smoke.rs  s3_compare_lifecycle_ops.rs  s3_compare_postgres.rs  s3_compare_server_lifecycle.rs  s3_compression_ratio.rs  s3_credentials_smoke.rs  s3_isolation_under_load.rs  s3_large_dataset_pointquery.rs  s3_predicate_pushdown.rs  s3_scaling_concurrency.rs  s3_scaling_data_size.rs  s3_scaling_idle_tenants.rs  s3_scaling_noisy_neighbor.rs  s3_shard_insert_path.rs  s3_tenant_deletion.rs  s3_vector_search.rs  s3_viability_analytical.rs  s3_viability_analytical_routing.rs  s3_viability_durable_catalog.rs  s3_viability_extended_protocol.rs  s3_viability_idle_tenant_ram.rs  s3_viability_orm_compat.rs  s3_viability_update_delete.rs  scaling_concurrency.rs  scaling_data_size.rs  scaling_idle_tenants.rs  scaling_noisy_neighbor.rs  vector_smoke.rs  viability_README.md  (+9 more)
