[workspace]
resolver = "2"
members = [
    "crates/basin-common",
    "crates/basin-storage",
    "crates/basin-catalog",
    "crates/basin-engine",
    "crates/basin-wal",
    "crates/basin-shard",
    "crates/basin-router",
    "crates/basin-placement",
    "crates/basin-analytical",
    "crates/basin-vector",
    "services/basin-server",
    "tests/integration",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
# Internal
basin-common = { path = "crates/basin-common" }
basin-storage = { path = "crates/basin-storage" }
basin-catalog = { path = "crates/basin-catalog" }
basin-wal = { path = "crates/basin-wal" }
basin-shard = { path = "crates/basin-shard" }
basin-router = { path = "crates/basin-router" }
basin-placement = { path = "crates/basin-placement" }
basin-analytical = { path = "crates/basin-analytical" }
basin-engine = { path = "crates/basin-engine" }
basin-vector = { path = "crates/basin-vector" }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1"

# Arrow / Parquet
arrow = "54"
arrow-array = "54"
arrow-schema = { version = "54", features = ["serde"] }
arrow-select = "54"
parquet = { version = "54", features = ["async", "object_store"] }
object_store = { version = "0.11", features = ["aws", "gcp", "http"] }

# Errors / logs
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs / time
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# SQL engine + pgwire
datafusion = "44"
pgwire = "0.28"
sqlparser = "0.52"

# Compact binary serialisation, used for the HNSW index segment format.
bincode = "1.3"

# Test
tempfile = "3"
tokio-test = "0.4"
proptest = "1"
tokio-postgres = "0.7"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1

[profile.bench]
lto = "thin"
