[package]
name = "basin-analytical"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
basin-common.workspace = true
basin-catalog.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
