[package]
name = "basin-analytical"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
basin-common.workspace = true
basin-catalog.workspace = true
basin-storage.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
object_store.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
duckdb.workspace = true

[dev-dependencies]
tempfile.workspace = true
