[package]
name = "basin-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
basin-common.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
arrow-schema.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
chrono.workspace = true
# Postgres-backed durable catalog. NoTls only for now; production deployments
# will need to swap in rustls or native-tls at the connect call site.
tokio-postgres = { workspace = true, features = ["with-serde_json-1", "with-chrono-0_4"] }

[dev-dependencies]
tempfile.workspace = true
