[package]
name = "basin-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
basin-common.workspace = true
basin-storage.workspace = true
basin-catalog.workspace = true
basin-vector.workspace = true
basin-shard.workspace = true
basin-wal.workspace = true
basin-analytical.workspace = true

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
parquet.workspace = true
bytes.workspace = true
datafusion.workspace = true
sqlparser.workspace = true
object_store.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
url = "2"

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
