[package]
name = "basin-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
basin-common.workspace = true
basin-engine.workspace = true
basin-pool.workspace = true
basin-auth.workspace = true

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
bytes.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
pgwire.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
# JWT resolver tests stand up a live `AuthService` against PG; the
# tokio-postgres / ulid / uuid deps are only needed for the per-test schema
# guard and the test issuer. They mirror what basin-auth's own tests use.
tokio-postgres.workspace = true
ulid.workspace = true
uuid.workspace = true
# Pool-acquire test in protocol.rs needs to construct a real Engine + Pool.
basin-storage.workspace = true
basin-catalog.workspace = true
object_store.workspace = true
