[package]
name = "basin-wal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
basin-common.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
bytes.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
ulid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
